sidebar icons and text align center fixed

--- a/src/components/sidebarRedevelop/styles.scss
+++ b/src/components/sidebarRedevelop/styles.scss
@@ -225,6 +225,7 @@
               align-items: center;
               gap: 10px;
               min-height: 32px;
+              line-height: 2px;
 
               & span {
                 font-weight: 500;
